# elte-cbsd

./: .gitignore  Ataxx.hs  IDS.hs  Potyogos.hs  Search.hs  TAGS  TicTacToe.hs  communication2.json  elte-cbsd-games.cabal  notes.txt
CBSD/: #Agarak.hs#  Agarak.hs  Ataxx.hs  AtaxxExec.hs  CommTest.hs  Common.hs  HeuMain.hs  MessageGen.hs  Messages.hs  Potyogos.hs  PotyogosExec.hs  PotyogosTest.hs  Search.hs  TODO.txt  Test.hs  TicTacToe.hs
CBSD/Components/: GetPortArg.hs  Heuristic.hs  Logic.hs  Tree.hs
CBSD/Messages/: MakeCodec.hs  SocketComm.hs  TH.hs  Types.hs
CBSD/TestGames/: Ataxx.hs  Potyogos.hs
CBSD/Utils/: GetPortArg.hs
TestExecs/Components/: AlphaBetaTree.hs  AlphaBetaTree10.hs  AlphaBetaTree3.hs  AlphaBetaTree5.hs  AtaxxHeu.hs  AtaxxLogic.hs  AtaxxTree.hs  AtaxxTreeWithHeu.hs  Execs.hs  Minimax3.hs  Minimax5.hs  PotyogosHeu.hs  PotyogosLogic.hs  PotyogosTree.hs  PotyogosTreeWithHeu.hs
TestExecs/Games/: Ataxx.hs  Potyogos.hs
proba/: README.txt
proba/fuz/: gameguijar.json  parameters.json
src/CBSD/: Agarak.hs  Ataxx.hs  Potyogos.hs  Search.hs
src/CBSD/Components/: Heuristic.hs  Logic.hs  Tree.hs
src/CBSD/Messages/: SocketComm.hs  TH.hs  Types.hs
src/CBSD/Utils/: GetPortArg.hs  GetPortArgs.hs
