
name:                elte-cbsd-games
version:             0.1.0.0     
license:             BSD3
license-file:        LICENSE
author:              András Kovács
maintainer:          puttamalac@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010

  exposed-modules:     
                       CBSD.Potyogos,                       
                       CBSD.Ataxx,
                       CBSD.Search,
                       
                       CBSD.Messages.TH,
                       CBSD.Messages.Types,
                       CBSD.Messages.SocketComm,
                       
                       CBSD.Components.Heuristic,
                       CBSD.Compoments.Tree,
                       
                       CBSD.TestGames.Ataxx,
                       CBSD.TestGames.Potyogos

  other-extensions: 
    TemplateHaskell
    
  build-depends:       
                         aeson >= 0.8.0.2
                       , array >=0.5 && <0.6
                       , base >=4.7 && <4.9
                       , bytestring >= 0.10.6.0
                       , lens >=4.7 && <4.10
                       , lens-aeson >= 1.0.0.3
                       , mtl >=2.2 && <2.3
                       , network
                       , split >=0.2 && <0.3
                       , text >= 1.2
                       , timeout-with-results >=0.2 && <0.3
                       , transformers >=0.4 && <0.5
                       , unordered-containers >= 0.2.5
                       , vector >=0.10 && <0.11
                       , vector-th-unbox >=0.2 && <0.3

-- executable test
--   default-language: Haskell2010
--   main-is: CBSD/Test.hs
--   ghc-options: -O2 -fllvm
--   other-extensions: TemplateHaskell
--   build-depends:
--                          aeson >= 0.8.0.2
--                        , array >=0.5 && <0.6
--                        , base >=4.7 && <4.9
--                        , bytestring >= 0.10.6.0
--                        , lens >=4.7 && <4.10
--                        , lens-aeson >= 1.0.0.3
--                        , mtl >=2.2 && <2.3
--                        , network
--                        , split >=0.2 && <0.3
--                        , timeout-with-results >=0.2 && <0.3
--                        , transformers >=0.4 && <0.5
--                        , unordered-containers >= 0.2.5
--                        , vector >=0.10 && <0.11
--                        , vector-th-unbox >=0.2 && <0.3


-- executable potyogos-exec
--   default-language: Haskell2010
--   main-is: CBSD/PotyogosExec.hs

--   ghc-options: -O2

--   build-depends:           
--                              array >=0.5 && <0.6
--                            , aeson >= 0.8.0.2
--                            , base >=4.7 && <4.9
--                            , lens >=4.7 && <4.10
--                            , mtl >=2.2 && <2.3
--                            , split >=0.2 && <0.3
--                            , timeout-with-results >=0.2 && <0.3
--                            , transformers >=0.4 && <0.5
--                            , vector >=0.10 && <0.11
--                            , vector-th-unbox >=0.2 && <0.3


-- executable ataxx-exec
--   default-language: Haskell2010
--   main-is: CBSD/AtaxxExec.hs

--   ghc-options: -O2 -fllvm

--   build-depends:           
--                              array >=0.5 && <0.6
--                            , aeson >= 0.8.0.2
--                            , base >=4.7 && <4.9
--                            , lens >=4.7 && <4.10
--                            , mtl >=2.2 && <2.3
--                            , split >=0.2 && <0.3
--                            , timeout-with-results >=0.2 && <0.3
--                            , transformers >=0.4 && <0.5
--                            , vector >=0.10 && <0.11
--                            , vector-th-unbox >=0.2 && <0.3

