
name:                elte-cbsd-games
version:             0.1.0.0     
license:             BSD3
license-file:        LICENSE
author:              András Kovács
maintainer:          puttamalac@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options: -O2

  exposed-modules:     
    CBSD.Potyogos,                       
    CBSD.Ataxx,
    CBSD.Search,
    CBSD.Utils.GetPortArg,
    CBSD.Messages.TH,
    CBSD.Messages.Types,
    CBSD.Messages.SocketComm,
    CBSD.Components.Heuristic,
    CBSD.Components.Logic,
    CBSD.Components.Tree

  other-extensions: 
    TemplateHaskell
    
  build-depends:       
     aeson >= 0.8.0.2
   , array >=0.5 && <0.6
   , async >= 2
   , base >=4.7 && <4.9
   , bytestring >= 0.10.6.0
   , lens >=4.7 && <4.10
   , lens-aeson >= 1.0.0.3
   , mtl >=2.2 && <2.3
   , network
   , split >=0.2 && <0.3
   , text >= 1.2
   , timeout-with-results >=0.2 && <0.3
   , transformers >=0.4 && <0.5
   , unordered-containers >= 0.2.5
   , vector >=0.10 && <0.11
   , vector-th-unbox >=0.2 && <0.3
   
executable ataxx-tree-with-heu
           
  default-language: Haskell2010           
  hs-source-dirs: TestExecs
  main-is: Components/AtaxxTreeWithHeu.hs
  ghc-options: -O2
  
  build-depends:
        network ,
        base >= 4.7 && <4.9 ,
        elte-cbsd-games

executable ataxx-heu
           
  default-language: Haskell2010           
  hs-source-dirs: TestExecs
  main-is: Components/AtaxxHeu.hs
  ghc-options: -O2
  
  build-depends:
        network ,
        base >= 4.7 && <4.9 ,
        elte-cbsd-games

executable ataxx-logic
           
  default-language: Haskell2010           
  hs-source-dirs: TestExecs
  main-is: Components/AtaxxLogic.hs
  ghc-options: -O2
  
  build-depends:
        network ,
        base >= 4.7 && <4.9 ,
        elte-cbsd-games                                                                       

executable ataxx
           
  default-language: Haskell2010           
  hs-source-dirs: TestExecs
  main-is: Games/Ataxx.hs
  ghc-options: -O2
  
  build-depends:
        split ,
        vector ,
        network ,
        base >= 4.7 && <4.9 ,
        elte-cbsd-games

executable potyogos
           
  default-language: Haskell2010           
  hs-source-dirs: TestExecs
  main-is: Games/Potyogos.hs
  ghc-options: -O2
  
  build-depends:
        array ,
        split ,
        network ,
        base >= 4.7 && <4.9 ,
        elte-cbsd-games                                